﻿# April 2023

 • [Grunt] Range reduced from 240->230 and health reduced from 290->270
 • [Pawn] Damage per shot reduced from 10->9
 • [Tick] Metal cost increased from 15->17
 • [T1 Vehicle Scouts] Damage per shot increased from 30->35 
 • Targeting improvements to tiger tank and turtle tank

# March 2023

 • [T3 Hovertanks] Depthcharges added and main turrets can no longer target underwater units
 • [Thor] Speed nerf 60->54, spark forkdamage nerf 0.5->0.25 (now deals 750 damage as aoe instead of 1500)
 • [Commanders] can no longer capture allied units
 • [Seaplane Platforms] added sonar distance for armada: 600, cortex: 800
 • [factories] tiny radar ranges removed + added large ranges for t1 air: 500, t2 air: 1000, armada seaplane: 750


# February 2023

 • [missiles] antinukes/nukes/tacnukes/empmissiles no longer collide into enemy (air) units
 • [Titan/Juggernaut] added foot stomp "weapon"


# January 2023

 • [vehicle scouts] accuracies and turnrate increased, damage reduced slightly. Cortex more maneuverable but slightly slower than armada, with reduced health


# December 2022

 • [catalyst] Range -18% Nerf (2750 -> 2250), Area of Effect -26% Nerf (512 -> 380), Damage +60% Buff (2500 -> 4000)


# August 2022

 • [Torpedo gunships] weapon changed to match up with other torpedos (damage and speed), accuracy and targeting improved. 


# May 2022

 • [Sniper] speed: 30->33


# March 2022

 • [Sabre] reloadtime 12% slower, range -11%
 • [Stiletto] slower turnrate, 15 -> 10 sec paralyze duration, lower flight altitude


# January 2022

 • [EMP-spider] health 850 -> 1000, increased turret turn speed
 • [T1 walls] Removed energy cost + land walls: reduced metal cost 11 -> 8
 • [T2 walls] Halved energy cost (~1000 -> 500) + rounded up metal cost 38/39 -> 40
 • [Thor] EMP missile weapon is by manual fire only


# December 2021

 • [Fido] cost: 270m->300m, 5600->6300E
 • [Sniper] speed: 35.4->30
 • [Zeus] unnerfed: dps 200->220