@@ -113,6 +113,7 @@ return {
 			adv_rocket = {
 				areaofeffect = 90,
 				avoidfeature = false,
+				burnblow = true,
 				burst = 3,
 				burstrate = 0.3,
 				cegtag = "missiletrailsmall-simple",
@@ -145,14 +146,22 @@ return {
 				targetmoveerror = 0.2,
 				texture1 = "null",
 				texture2 = "smoketrailbar",
-				trajectoryheight = 1,
-				turnrate = 2000,
+				--fixedLauncher = true,
+				trajectoryheight = 0.5,
+				turnrate = 6000,
 				turret = true,
 				weaponacceleration = 70,
 				weapontimer = 6,
 				weapontype = "MissileLauncher",
 				weaponvelocity = 450,
 				wobble = 2500,
+				customparams = {
+					speceffect = "cruise",
+					when = "distance>0",
+					lockon_dist = "150",
+					cruise_min_height = "15",
+					cruise_max_height = "20",
+				},
 				damage = {
 					default = 200,
 					subs = 100,
